Updated Help Page and About us with some text/functionality changes.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -105,7 +105,7 @@
 
 
 
-    <!-- (5) ROOMS TEAM -->
+     <!-- (5) ROOMS TEAM -->
     <div class="container-fluid about-rooms-team">
         <br>
         <br>
@@ -128,10 +128,10 @@
                             <h4>Artem Fedyaev</h4>
                             <h4 class="about-text-blue">Master Mind</h4>
                             <span>
-                                <a href="http://www.linkedin.com/in/artemfedyaev/"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/in/artemfedyaev/" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/artem"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/artem" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -151,10 +151,10 @@
                             <h4>John Gonzalez</h4>
                             <h4 class="about-text-blue">El Presidente</h4>
                             <span>
-                                <a href="http://www.linkedin.com/in/johnnypreneur"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/in/johnnypreneur" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/john"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/john" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -174,10 +174,10 @@
                             <h4>Daria Rebenok</h4>
                             <h4 class="about-text-blue">Marketing Wizard</h4>
                             <span>
-                                <a href="http://www.linkedin.com/in/drebenok"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/in/drebenok" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/drebenok"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/drebenok" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -197,10 +197,10 @@
                             <h4>Aubrey Andel</h4>
                             <h4 class="about-text-blue">Editorial Dictator</h4>
                             <span>
-                                <a href="http://www.linkedin.com/pub/aubrey-andel/a/a1a/ba"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/pub/aubrey-andel/a/a1a/ba" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/aubrey"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/aubrey" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -224,10 +224,10 @@
                             <h4>Millu Araya</h4>
                             <h4 class="about-text-blue">Silent Designer</h4>
                             <span>
-                                <a href="http://www.linkedin.com/pub/meley-araya/37/9b6/704"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/pub/meley-araya/37/9b6/704" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/millu"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/millu" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -247,10 +247,10 @@
                             <h4>Gabriel Vargas</h4>
                             <h4 class="about-text-blue">Capitán AmeriCoder</h4>
                             <span>
-                                <a href="http://www.linkedin.com/pub/gabriel-vargas/18/868/34b/"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/pub/gabriel-vargas/18/868/34b/" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/gabriel"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/gabriel" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -270,10 +270,10 @@
                             <h4>Sara Neale</h4>
                             <h4 class="about-text-blue">Elite Web Goddess</h4>
                             <span>
-                                <a href="http://saratheneale.github.io/"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://saratheneale.github.io/" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/saran"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/saran" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -293,10 +293,10 @@
                             <h4>Dave Riddle</h4>
                             <h4 class="about-text-blue">Full-Stack Destroyer of Worlds</h4>
                             <span>
-                                <a href="http://www.linkedin.com/in/joyvuudave"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/in/joyvuudave" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/dave"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/dave" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -320,10 +320,10 @@
                             <h4>Nathalie Aguinaldo</h4>
                             <h4 class="about-text-blue">Design Maven</h4>
                             <span>
-                                <a href="http://www.linkedin.com/pub/nathalie-aguinaldo/3/13/7a7"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/pub/nathalie-aguinaldo/3/13/7a7" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/nathalie"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/nathalie" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
@@ -336,17 +336,18 @@
                                 <%= cl_image_tag("dana-team-myWebRoom.png", height: 250, width: 250, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                             </div>
                             <p class="about-quote about-quote-small">
-                                 "Good comes to those who wait."<br>Mother Goose
+                                 "Creativity is allowing yourself to make mistakes. Art is knowing
+                                 which ones to keep."<br>Scott Adams
                             </p>
                         </div>
                         <div class="caption text-center">
                             <h4>Dana Johnson</h4>
                             <h4 class="about-text-blue">Social Media Artist</h4>
                             <span>
-                                <a href="http://www.linkedin.com/"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="http://www.linkedin.com/pub/dana-johnson/69/a83/381" target="_blank"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                             <span>
-                                <a href="/room/dana"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                                <a href="/room/dana" target="_blank"><%= cl_image_tag("mywebroom-icon-logo-team.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                             </span>
                         </div>
                     </div>
