--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -185,7 +185,7 @@
             <br>
             3.&nbsp;&nbsp;Choose the Bundle you'd like to preview.
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change the entire objects in your room as well.</em>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: This option will change all of the objects in your room as well.</em>
             <br>
         </p>
 
@@ -231,7 +231,7 @@
         <p>
             1.&nbsp;&nbsp;Click <em>Cancel Changes</em> button if you don't want to keep any changes made to your room.
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: you can change multiple objects and save all the changes once you are<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: You can change multiple objects and save all the changes once you are<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;finished updating your room.</em>
             <br>
         </p>
@@ -251,7 +251,7 @@
         <h5>Remove Object</h5>
 
         <p>
-            1.&nbsp;&nbsp;Click the <em>Editor</em> button on the toolbar and selec an object you want to remove.
+            1.&nbsp;&nbsp;Click the <em>Editor</em> button on the toolbar and select an object you want to remove.
             <br>
             2.&nbsp;&nbsp;Then Click the <em>Remove Object</em> button.
             <br>
@@ -275,7 +275,7 @@
         <p>
             1.&nbsp;&nbsp;To add the object back, click on the <em>Editor</em> button and the deleted object will appear
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;greyed out with a plus sign.
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;grayed out with a plus sign.
             <br>
             2.&nbsp;&nbsp;Click on the object you would like to add and then click <em>Save Design</em>.
             <br>
@@ -300,7 +300,7 @@
         <p>
             1.&nbsp;&nbsp;Click on any object to open up the bookmark interface.
             <br>
-            2.&nbsp;&nbsp;Click on <em>Discover</em> to view all the available sites for the category. (Click to preview site).
+            2.&nbsp;&nbsp;Click on <em>Discover</em> to view all the available sites for the category (click to preview site).
             <br>
         </p>
 
@@ -432,7 +432,7 @@
         <h5>View Room</h5>
 
         <p>
-            1.&nbsp;&nbsp;Click on the gear icon and then <em>View Room</em>to checkout your friend's room.
+            1.&nbsp;&nbsp;Click on the gear icon and then <em>View Room</em> to checkout your friend's room.
             <br>
         </p>
 
@@ -457,7 +457,7 @@
         <p>
             1.&nbsp;&nbsp;In the friends tab, click on your friend's name or picture to open up their profile page.
             <br>
-            2.&nbsp;&nbsp;View and photos.
+            2.&nbsp;&nbsp;View their photos.
             <br>
         </p>
 
@@ -505,9 +505,7 @@
         <p>
             1.&nbsp;&nbsp;Click the gear icon to view your friend's room.
             <br>
-            2.&nbsp;&nbsp;From your friend's profile view, you can see his objects. From this view you are able to
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;try some of the objects your friend has on your room. Same with bookmarks.
+            2.&nbsp;&nbsp;From this view you are able to try some of the objects your friend has in your room.
             <br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>*Note: You can share objects through Social Media by using the "Share" and "Pin" buttons.</em>
             <br>
@@ -762,7 +760,7 @@
             </div>
             <br>
             <div>
-                A.&nbsp;&nbsp;Our technology aims to keep most sites within one platform, allowing you to stay in your webroom while you access the web from one place. We’ve manipulated a powerful tool to ensure one of the most private and visual browsing experiences on the internet today. That said, the ones that open on a separate tab, are companies that don’t agree with our vision of complete online privacy.
+                A.&nbsp;&nbsp;Our technology aims to keep most sites within our platform, allowing you to stay in your webroom while you access the web from one place. We’ve manipulated a powerful tool to ensure one of the most private and visual browsing experiences on the internet today. That said, the sites that open in a separate tab, are companies that have their own privacy policies.
             </div>
         </p>
 
