Fix hover events, preview mode text, save bookmark error
When you click active sites now, if there are none, toast pops over what you were doing without closing. Previously, everything would close, but objects were not clickable.
Preview Mode text area now has a max-height with scroll added in cases of long bookmark descriptions.
Save Bookmark in customURL was erroring in empty collections. Fixed it.

--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -256,10 +256,13 @@ div.just_added img{
   border-top: 1px solid #707070;
   width:230px;
 }
- /*To make preview mode button align correctly.*/
+ 
 #bookmark_sidebar_preview_mode .bookmark_sidebar_preview_mode_description{
+  /*To make preview mode button align correctly.*/
   padding-right:1.5em;
   margin-top:10px;
+  max-height: 200px;
+  overflow: auto;
 }
 .preview_mode_save_button,.save_site_button {
   background-color:#0099cb;
