Updated Help page and about us based on Millu's feedback.

--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -6,7 +6,7 @@
 }
 
 .help-page-fixed-menu {
-	margin-top: 5px;
+	margin-top: 40px;
 }
 .help-page-main-top-margin {
 	margin-top: 15px;
@@ -35,4 +35,8 @@ http://css-tricks.com/hash-tag-links-padding/
   height: 50px;
   margin: -50px 0 0;
   visibility: hidden;
+}
+
+#help-li-line-height {
+	line-height: 16px;
 }
