--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -535,7 +535,7 @@
                 <div class="about-press about-margin-left">
                     <h2 class="about-heading-black padding-left-small">PRESS</h2>
                     <p class="about-text-black padding-left-small about-partners-text">
-                        The news about myWebRoom.com is spreading! We’ve been featured on tech, startup, and interior design sites. Here are a few of the places we have been featured so you can see and share the love.
+                        The news about myWebRoom.com is spreading! We’ve been featured on tech, startup, and interior design sites. Here are a few of the places we have been featured so you can see and share.
                     </p>
                     <br>
                     <div class="container-fluid">
