--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -17,83 +17,83 @@
     <div class="span4 help-page-fixed-menu">
         <ul class="nav nav-list" data-spy="affix">
             <li class="nav-header">DECORATE</li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 1.1 -->
                 <a href="#change_objects">Change Objects</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 1.2 -->
                 <a href="#change_theme">Change Theme</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 1.3 -->
                 <a href="#change_bundle">Change Bundle</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 1.4 -->
                 <a href="#save_and_cancel_changes">Save &amp; Cancel Changes</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 1.5 -->
                 <a href="#add_and_remove_objects">Add &amp; Remove Objects</a>
             </li>
             <li class="divider"></li>
             <li class="nav-header">ORGANIZE</li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 2.1 -->
                 <a href="#discover_bookmarks">Discover Bookmarks</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 2.2 -->
                 <a href="#add_and_create_bookmarks">Add &amp; Create Bookmarks</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 2.3 -->
                 <a href="#delete_bookmarks">Delete Bookmark</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 2.4 -->
                 <a href="#active_sites">Active Sites</a>
             </li>
             <li class="divider"></li>
             <li class="nav-header">SHARE</li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 3.1 -->
                 <a href="#key_requests">Key Requests</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 3.2 -->
                 <a href="#friends_room">Friend's Room</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 3.3 -->
                 <a href="#upload_your_photos">Upload Your Photos</a>
             </li>
-             <li>
+             <li id="help-li-line-height">
                 <!-- 3.4 -->
                 <a href="#share_objects">Share Objects</a>
             </li>
             <li class="divider"></li>
             <li class="nav-header">PROFILE SETTINGS</li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 4.1 -->
                 <a href="#change_username_or_password">Change Username or Password</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 4.2 -->
                 <a href="#edit_profile_information">Edit Profile Information</a>
             </li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 4.3 -->
                 <a href="#change_photo">Change Profile Picture</a>
             </li>
-             <li>
+             <li id="help-li-line-height">
                 <!-- 4.4 -->
                 <a href="#add_delete_photo">Delete Photo</a>
             </li>
             <li class="divider"></li>
             <li class="nav-header">FAQ</li>
-            <li>
+            <li id="help-li-line-height">
                 <!-- 5 -->
                 <a href="#faq">Frequently Asked Questions</a>
             </li>
