--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -20,3 +20,45 @@ window.fbAsyncInit = ->
         FB.getLoginStatus (response) ->
             FB.logout() if response.authResponse
         true
+
+
+#//This file is code from Facebook's developer section.
+#//The code creates a namespace called FB- hence the name of this file.
+#
+#//From Facebook- this code is for connecting the like buttons on the page.\
+
+((d, s, id) ->
+    js = undefined
+    fjs = d.getElementsByTagName(s)[0]
+    return  if d.getElementById(id)
+    js = d.createElement(s)
+    js.id = id
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1"
+    fjs.parentNode.insertBefore js, fjs
+) document, "script", "facebook-jssdk"
+#//From Facebook- this code is for loading the SDK, so we can use FB ui and api calls
+
+
+window.fbAsyncInit = ->
+
+    # init the FB JS SDK
+    FB.init
+        appId: "<%= ENV["ROOMS_FACEBOOK_APP_ID"] %>" # App ID from the app dashboard
+        status: true # Check Facebook Login status
+        xfbml: true
+        cookie: true # Look for social plugins on the page
+
+
+# Additional initialization code such as adding Event Listeners goes here
+
+
+# Additional initialization code such as adding Event Listeners goes here
+((d, s, id) ->
+    js = undefined
+    fjs = d.getElementsByTagName(s)[0]
+    return  if d.getElementById(id)
+    js = d.createElement(s)
+    js.id = id
+    js.src = "//connect.facebook.net/en_US/all.js"
+    fjs.parentNode.insertBefore js, fjs
+) document, "script", "facebook-jssdk"
