--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -31,8 +31,13 @@
 
 
 
-
-
 </div>
+
+<script type="text/javascript">
+    //  remove facebook _=_ for firefox
+    if (window.location.hash !== '#')window.location.hash = '';
+
+</script>
+
 
 
