Adjusted for Profile Objects and Profile Bookmarks

--- a/app/assets/stylesheets/rooms_profile.css.scss
+++ b/app/assets/stylesheets/rooms_profile.css.scss
@@ -405,6 +405,7 @@ div.profileHome_activity.generalGrid{
 #profileHome_activity_header, .profileTableHeader{
   border-collapse:collapse;
   width:620px;
+  height:auto;
 }
 .gridItemPicture {
   width:180px;
