fix yahoo link page

--- a/app/views/password_resets/thank_you_page.html.erb
+++ b/app/views/password_resets/thank_you_page.html.erb
@@ -55,7 +55,7 @@
         <% if @static_content.nil? or @static_content.image_name.blank?  %>
             <%= link_to("YMail","//yahoo.com‎") %>
         <% else %>
-            <a href="http://www.yahoo.com/‎">
+              <a href="http://mail.yahoo.com" target="_blank">
               <%= cl_image_tag(@static_content.image_name, :width => 50, :height => 45, :crop => :fit, :alt => "Yahoo Mail" ) %> </br>
                 YMail
             </a>
