--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -296,7 +296,7 @@ padding: 8px 35px;
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
             <p class="landing_text_2" >SHARE</p>
-            <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Content &nbsp;  &#183; &nbsp;  Design</p><br>
+            <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Content &nbsp;  &#183; &nbsp;  Designs</p><br>
            <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
