--- a/app/assets/stylesheets/feedback_lightbox.css.scss
+++ b/app/assets/stylesheets/feedback_lightbox.css.scss
@@ -50,12 +50,12 @@
 
 }
 
-#feeedback_label_name{
+#feedback_label_name{
   margin-right: 360px;
 
 }
 
-#feeedback_label_comment{
+#feedback_label_comment{
   margin-right: 378px;
   margin-top: 20px;
 }
