'Got to' --> 'Go to'

--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -75,7 +75,7 @@
               <input type="button"
                      id="shop_green_button"
                      class="green_button green_button_light"
-                     value="Got to <%=@items_design_btn_url_name.to_s%>"
+                     value="Go to <%=@items_design_btn_url_name.to_s%>"
                      onclick="window.open('<%=@items_design.product_url%>','_blank')"
                      style="background-image: url('<%= @static_content.image_name %>')">
             </form>
