--- a/app/views/layouts/_signup.html.erb
+++ b/app/views/layouts/_signup.html.erb
@@ -29,10 +29,11 @@
       </div>
       <%= link_to_function "Term of Use", "signup_lightbox_term_of_use_show()", :id => "signup_term_of_use_link" %>
       <div class="actions">
-        <input class="blue_button" name="commit" type="submit" value="SIGN UP">
+        <input class="blue_button" name="commit" type="submit" value="SIGN UP" onClick="gaq.push(['_trackEvent', 'signin','regular','user']);">
       </div>
   </form>
 </div>
+
 
 <div id="signup_term_of_use">
   <% if @static_content_x_img.nil? or @static_content_x_img.image_name.blank?   %>
