Hide all content until everything is loaded.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
     <%= render 'layouts/login' %>
 
     <%if @landing_page_view%>
-      <div class="container fill landing_page_view">
+      <div class="container fill landing_page_view hidden">
     <%else%>
       <div class=<%= "container" unless @skip_container %>>
     <%end%>  
