--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -169,6 +169,7 @@
 </div>
 
   <script type="text/javascript">
+  $('.landing_page_view').removeClass('hidden');
   $('.carousel').carousel()
   </script>
 
