Makes quote box bigger

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -335,7 +335,7 @@
                             <div class="about-individual-picture">
                                 <%= cl_image_tag("dana-team-myWebRoom.png", height: 250, width: 250, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                             </div>
-                            <p class="about-quote about-quote-small">
+                            <p class="about-quote about-quote-large">
                                  "Creativity is allowing yourself to make mistakes. Art is knowing
                                  which ones to keep."<br>Scott Adams
                             </p>
