--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,8 @@
     <th>User Id</th>
     <th>Email</th>
     <th>UserName</th>
+    <th>Create Date</th>
+
 
 
   </tr>
@@ -18,6 +20,8 @@
         <td><%= user.id %></td>
         <td><%= user.email %></td>
         <td><%= user.username %></td>
+        <td><%= user.created_at %></td>
+
 
       </tr>
   <% end %>
