--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,6 +3,7 @@
 <% content_for :head do %>
     <!-- your tags -->
     <meta name="description" content="A virtual place to Express, Organize, Discover, Share and Create.">
+    <meta name="p:domain_verify" content="7dbb038bf929f8b1b1de9107a3777b8b"/>
 <% end %>
 
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
