Hide Google + link so it doesn't mess up page layout

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
     <!-- your tags -->
     <meta name="description" content="A virtual place to Express, Organize, Discover, Share and Create.">
     <meta name="p:domain_verify" content="7dbb038bf929f8b1b1de9107a3777b8b"/>
-    <a href="https://plus.google.com/+Mywebroom" rel="publisher">Google+</a>
+    <a style="display:none;" href="https://plus.google.com/+Mywebroom" rel="publisher">Google+</a>
 <% end %>
 
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
